[project]
name = "mov"
version = "0.2.0"
description = "영화진흥위원회 영화순위 데이터 처리"
authors = [
    {name = "hahahellooo", email = "hahahello777@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[project.scripts]
mov-ping = 'mov.cli:ping'

[project.urls]
Homepage = "https://github.com/hahahellooo/mov"
Issues = "https://github.com/hahahellooo/mov/issues"
